feat: dockerization, fixes and backend documentation